--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.15.0",
     "express": "^4.17.1",
+    "mavon-editor": "^2.9.1",
     "qs.js": "^0.1.12",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
